tests/trybuild-failures/not_binary_expression.stderr
error: expected a comparison, e.g. foo() == 1
 --> $DIR/not_binary_expression.rs:4:16
  |
4 |     assertify!("foo");
  |                ^^^^^
